skeleton html done

--- a/index.html
+++ b/index.html
@@ -8,9 +8,104 @@
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 </head>
 <body>
-
-
-
-  <p style="text-align: center;"><a href="https://triyanarief.github.io/" target="_blank">Designed by Triyan AW</a></p>
+	<header>
+		<div id="header-inner">
+			<a href="index.html" id="logo"></a>
+			<nav>
+				<a href="#" id="menu-icon"></a>
+					<ul>
+						<li><a href="index.html" class="current">Beranda</a></li>
+						<li><a href="#">Skills</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Tim Kami</a></li>
+						<li><a href="#">Hubungi</a></li>
+					</ul>
+			</nav>
+		</div>
+	</header>
+	<!-- End Header -->
+	<section class="banner">
+		<div class="banner-inner">
+			<img src="img/rocket_design.png">
+		</div>
+	</section>
+	<!-- End Banner -->
+	<section class="one-fourth" id="html">
+		<td><i class="fa fa-html5"></i></td>
+		<h3>HTML</h3>
+	</section>
+	<section class="one-fourth" id="css">
+		<td><i class="fa fa-css3"></i></td>
+		<h3>CSS</h3>
+	</section>
+	<section class="one-fourth" id="seo">
+		<td><i class="fa fa-search"></i></td>
+		<h3>SEO</h3>
+	</section>
+	<section class="one-fourth" id="social">
+		<td><i class="fa fa-users"></i></td>
+		<h3>SOCIAL</h3>
+	</section>
+	<!-- AKHIR  dari 4 kolom section -->
+	<section class="inner-wrapper">
+		<article id="tablet">
+			<img src="img/hand_ipad.png">
+		</article>
+		<aside id="tablet">
+			<h2>MOBILE, TABLET, DESKTOP</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quod, qui quaerat voluptatibus exercitationem at voluptas aspernatur aperiam fugit odio voluptates id. Impedit sunt eligendi, obcaecati vitae nisi ratione cupiditate, numquam, a sequi, dolore non praesentium? Quas nostrum, aspernatur voluptates nobis sit voluptatem blanditiis, et illum sequi ea vitae dignissimos.</p>
+		</aside>
+	</section>
+	<section class="inner-wrapper-2">
+		<article id="mobile">
+			<h2>ACROSS EACH DEVICE</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quod, qui quaerat voluptatibus exercitationem at voluptas aspernatur aperiam fugit odio voluptates id. Impedit sunt eligendi, obcaecati vitae nisi ratione cupiditate, numquam, a sequi, dolore non praesentium? Quas nostrum, aspernatur voluptates nobis sit voluptatem blanditiis, et illum sequi ea vitae dignissimos.</p>
+		</article>
+		<aside>
+			<img src="img/hand_mobile.png">
+		</aside>
+	</section>
+	<section class="inner-wrapper">
+		<article>
+			<img src="img/desktop.png">
+		</article>
+		<aside id="desktop">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde aspernatur minima ea provident! Iure commodi cumque dolor atque rerum impedit minus culpa porro animi exercitationem ab ratione sunt necessitatibus beatae odio nemo, eos dicta. Quam eaque eveniet corrupti eos praesentium nobis dolorem modi consequatur officia, ratione libero enim tempore culpa.</p>
+		</aside>
+	</section>
+<!-- akhir dari dua kolom section -->
+<section class="inner-wrapper-3">
+	<section class="one-third" id="google">
+		<h3>GOOGLE SEARCH</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab odit saepe architecto deleniti. Sit, rerum iusto esse aperiam nemo voluptatem animi tempore, blanditiis minima quaerat eos eum sint fuga pariatur? Rem a qui iste est explicabo, illum deserunt fugiat, nam, praesentium earum impedit expedita et odit non quaerat! Amet, perspiciatis.</p>
+	</section>
+	<section class="one-third" id="marketing">
+		<h3>MARKETING</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab odit saepe architecto deleniti. Sit, rerum iusto esse aperiam nemo voluptatem animi tempore, blanditiis minima quaerat eos eum sint fuga pariatur? Rem a qui iste est explicabo, illum deserunt fugiat, nam, praesentium earum impedit expedita et odit non quaerat! Amet, perspiciatis.</p>
+	</section>
+	<section class="one-third" id="customers">
+		<h3>HAPPY CUSTOMERS</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab odit saepe architecto deleniti. Sit, rerum iusto esse aperiam nemo voluptatem animi tempore, blanditiis minima quaerat eos eum sint fuga pariatur? Rem a qui iste est explicabo, illum deserunt fugiat, nam, praesentium earum impedit expedita et odit non quaerat! Amet, perspiciatis.</p>
+	</section>
+</section>
+<!-- akhir dari tiga kolom section -->
+<section id="smiley">
+	<h2>: )</h2>
+</section>
+<!-- akhir smiley face -->
+<footer>
+	<ul class="social">
+		<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+		<li><a href="https://triyanarief.github.io/" target="_blank"><i class="fa fa-github"></i></a></li>
+		<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+		<li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+		<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+	</ul>
+</footer>
+<!-- akhir section footer -->
+<footer class="second">
+	<p>&copy; Triyan AW</p>
+</footer>
+<!-- akhir footer kedua -->
 </body>
 </html>
