--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<h2>ACROSS EACH DEVICE</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quod, qui quaerat voluptatibus exercitationem at voluptas aspernatur aperiam fugit odio voluptates id. Impedit sunt eligendi, obcaecati vitae nisi ratione cupiditate, numquam, a sequi, dolore non praesentium? Quas nostrum, aspernatur voluptates nobis sit voluptatem blanditiis, et illum sequi ea vitae dignissimos.</p>
 		</article>
-		<aside>
+		<aside class="hand-mobile">
 			<img src="img/hand_mobile.png">
 		</aside>
 	</section>
