--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Responsive Web Design</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link href="css/font-awesome.min.css" rel="stylesheet"/>
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	<link rel="shortcut icon" type="image/x-icon" href="http://i345.photobucket.com/albums/p362/triyanarief/favicon_zpsvnchyhxg.png">
 </head>
 <body>
 	<header>
@@ -95,11 +95,11 @@
 <!-- akhir smiley face -->
 <footer>
 	<ul class="social">
-		<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+		<li><a href="http://facebook.com/triyanarief" target="_blank"><i class="fa fa-facebook"></i></a></li>
 		<li><a href="https://triyanarief.github.io/" target="_blank"><i class="fa fa-github"></i></a></li>
-		<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+		<li><a href="https://twitter.com/triyanarief" target="_blank"><i class="fa fa-twitter"></i></a></li>
 		<li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
-		<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+		<li><a href="https://www.instagram.com/thequinoxlabs/" target="_blank"><i class="fa fa-instagram"></i></a></li>
 	</ul>
 </footer>
 <!-- akhir section footer -->
